syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.driver_service.grpc";
option java_outer_classname = "DriverLocationProto";

package driver;

service DriverLocationService {
  rpc SendLocation(stream LocationRequest) returns (LocationResponse);
}

message LocationRequest {
  string driverId = 1;
  double latitude = 2;
  double longitude = 3;
  int64 timestamp = 4; // epoch milliseconds
}

message LocationResponse {
  string status = 1;
}
