syntax = "proto3";

package driver;

service DriverService {
  rpc GetDriverInfo (DriverRequest) returns (DriverResponse);
}

message DriverRequest {
  string driver_id = 1;
}

message DriverResponse {
  string driver_id = 1;
  string name = 2;
  string vehicle = 3;
}
